feat: implement marker target retrieval for Tesseract machines and add configuration copy functionality