@@ -116,7 +116,7 @@ public final class FissionReactorMachine extends ElectricMultiblockMachine imple
             int required = recipeHeat * parallel * heat / 1500;
             if (required > 0) {
                 long[] a = getFluidAmount(DistilledWater, SodiumPotassium);
-                int capacity = (int) Math.min(Math.max(a[0] / 800, a[1] / 20), (cooler - (coolerAdjacent / 3L)) << 3);
+                int capacity = (int) Math.clamp(a[0] / 800, a[1] / 20, (cooler - (coolerAdjacent / 3L)) << 3);
                 if (capacity - required >= 0) {
                     if (inputFluid(DistilledWater, capacity * 800L)) {
                         isCooler = outputFluid(Steam, (int) (capacity * 800 * (heat > 373 ? 160 : 160 / Math.pow(1.4, 373 - heat))));
@@ -131,6 +131,7 @@ public final class FissionReactorMachine extends ElectricMultiblockMachine imple
                     int surplusProgress = progress - getMaxProgress();
                     if (surplusProgress > 0) {
                         if (heat > 298) heat -= surplusProgress / 20;
+                        getRecipeLogic().setProgress(getMaxProgress());
                     } else {
                         getRecipeLogic().setProgress(progress);
                     }
